tests/negative/typecheck/typeclass_eq.orng
// typeclass_eq.orng:8:9: error: the type `Void` does not contain the member `eq`
//     x == y // the ONLY type that isn't equalable
//        ^
// 
fn main() -> Bool {
    let x: Void = unreachable
    let y: Void = unreachable
    x == y // the ONLY type that isn't equalable
}